# LegalDocsReview

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
scripts/: clean-full.sh  clean-heavy.sh  clean-workspace.sh  dev-lean.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/ai/: claude.rs  mod.rs  ollama.rs  openai.rs  prompts.rs  provider.rs  types.rs
src-tauri/src/analysis/: mod.rs  risk_rules.rs
src-tauri/src/commands/: analysis_commands.rs  comparison_commands.rs  document_commands.rs  mod.rs  report_commands.rs  settings_commands.rs  template_commands.rs
src-tauri/src/db/: comparisons.rs  documents.rs  extractions.rs  migrations.rs  mod.rs  reports.rs  risk_assessments.rs  settings.rs  templates.rs
src-tauri/src/documents/: mod.rs  pdf.rs
src-tauri/src/reports/: mod.rs
src/components/analysis/: ClauseTable.test.tsx  ClauseTable.tsx  RiskPanel.test.tsx  RiskPanel.tsx
src/components/layout/: MainLayout.test.tsx  MainLayout.tsx
src/hooks/: useDocuments.test.ts  useDocuments.ts
src/lib/: commands.ts
src/pages/: Comparison.tsx  Dashboard.tsx  Reports.tsx  ReviewDetail.tsx  Settings.tsx  Templates.tsx  Upload.tsx
src/types/: index.ts
